--- a/.github/workflows/update-standings.yml
+++ b/.github/workflows/update-standings.yml
@@ -22,42 +22,42 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Detect Cardiff’s Current League and Season
+      - name: Detect Cardiff’s League and Season
         run: |
-          CURRENT_YEAR=$(date +%Y)
           TEAM_ID=43
+          MONTH=$(date +%m)
+          YEAR=$(date +%Y)
 
-          try_season() {
-            echo "Trying season: $1"
-            response=$(curl -s --request GET \
-              --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=$1&team=${TEAM_ID}" \
-              --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
-              --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
+          # If it's before August, use last season's data
+          if [ "$MONTH" -lt 8 ]; then
+            SEASON=$((YEAR - 1))
+          else
+            SEASON=$YEAR
+          fi
 
-            echo "$response" | jq . > tmp/cardiff-response.json
-
-            LEAGUE_ID=$(echo "$response" | jq -r '.response[0].league.id')
-            LEAGUE_NAME=$(echo "$response" | jq -r '.response[0].league.name')
-
-            if [ "$LEAGUE_ID" != "null" ] && [ -n "$LEAGUE_ID" ]; then
-              echo "✅ Cardiff are in $LEAGUE_NAME (League ID $LEAGUE_ID) for $1"
-              echo "LEAGUE_ID=$LEAGUE_ID" >> $GITHUB_ENV
-              echo "SEASON=$1" >> $GITHUB_ENV
-              return 0
-            fi
-            return 1
-          }
+          echo "📅 Using season: $SEASON"
 
           mkdir -p tmp
 
-          if ! try_season "$CURRENT_YEAR"; then
-            echo "⚠️ No data for $CURRENT_YEAR. Falling back to $((CURRENT_YEAR - 1))..."
-            if ! try_season "$((CURRENT_YEAR - 1))"; then
-              echo "❌ Could not determine Cardiff's league. Exiting."
-              cat tmp/cardiff-response.json
-              exit 1
-            fi
+          response=$(curl -s --request GET \
+            --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${SEASON}&team=${TEAM_ID}" \
+            --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
+            --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
+
+          echo "$response" | jq . > tmp/cardiff-response.json
+
+          LEAGUE_ID=$(echo "$response" | jq -r '.response[0].league.id')
+          LEAGUE_NAME=$(echo "$response" | jq -r '.response[0].league.name')
+
+          if [ "$LEAGUE_ID" = "null" ] || [ -z "$LEAGUE_ID" ]; then
+            echo "❌ Could not determine league ID. Exiting."
+            cat tmp/cardiff-response.json
+            exit 1
           fi
+
+          echo "✅ Cardiff are in $LEAGUE_NAME (League ID $LEAGUE_ID) for $SEASON"
+          echo "LEAGUE_ID=$LEAGUE_ID" >> $GITHUB_ENV
+          echo "SEASON=$SEASON" >> $GITHUB_ENV
 
       - name: Fetch League Standings
         run: |
@@ -78,4 +78,3 @@ jobs:
           else
             git commit -m "Update standings"
             git push
-          fi
