--- a/.github/workflows/update-standings.yml
+++ b/.github/workflows/update-standings.yml
@@ -17,65 +17,62 @@ permissions:
 jobs:
   update:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repo
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Detect Cardiff’s League and Season
+      - name: Set season and team
+        id: vars
         run: |
+          SEASON=$(date +%Y)
           TEAM_ID=43
-          MONTH=$(date +%m)
-          YEAR=$(date +%Y)
+          echo "SEASON=$SEASON" >> $GITHUB_ENV
+          echo "TEAM_ID=$TEAM_ID" >> $GITHUB_ENV
 
-          # If it's before August, use last season's data
-          if [ "$MONTH" -lt 8 ]; then
-            SEASON=$((YEAR - 1))
-          else
-            SEASON=$YEAR
-          fi
-
-          echo "📅 Using season: $SEASON"
-
-          mkdir -p tmp
-
+      - name: Fetch Cardiff standings to get league ID
+        id: fetch_league
+        run: |
+          echo "Fetching standings for Cardiff (team $TEAM_ID, season $SEASON)..."
           response=$(curl -s --request GET \
             --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${SEASON}&team=${TEAM_ID}" \
             --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
             --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
 
-          echo "$response" | jq . > tmp/cardiff-response.json
+          echo "$response" > tmp/cardiff-response.json
 
-          LEAGUE_ID=$(echo "$response" | jq -r '.response[0].league.id')
-          LEAGUE_NAME=$(echo "$response" | jq -r '.response[0].league.name')
+          LEAGUE_ID=$(echo "$response" | jq -r '.response[0].league.id // empty')
+          LEAGUE_NAME=$(echo "$response" | jq -r '.response[0].league.name // empty')
 
-          if [ "$LEAGUE_ID" = "null" ] || [ -z "$LEAGUE_ID" ]; then
+          if [ -z "$LEAGUE_ID" ]; then
             echo "❌ Could not determine league ID. Exiting."
             cat tmp/cardiff-response.json
             exit 1
           fi
 
-          echo "✅ Cardiff are in $LEAGUE_NAME (League ID $LEAGUE_ID) for $SEASON"
+          echo "Cardiff are in $LEAGUE_NAME (League ID $LEAGUE_ID) for $SEASON"
           echo "LEAGUE_ID=$LEAGUE_ID" >> $GITHUB_ENV
-          echo "SEASON=$SEASON" >> $GITHUB_ENV
+          echo "LEAGUE_NAME=$LEAGUE_NAME" >> $GITHUB_ENV
 
-      - name: Fetch League Standings
+      - name: Fetch standings for Cardiff’s league
         run: |
-          echo "📥 Fetching standings for League ID $LEAGUE_ID, Season $SEASON"
           curl -s --request GET \
             --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${SEASON}&league=${LEAGUE_ID}" \
             --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
             --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com" \
             | jq . > data/standings.json
 
-      - name: Commit and Push if Changed
+      - name: Download league icon
+        run: |
+          curl -s -o league-icon.png "https://media.api-sports.io/football/leagues/${LEAGUE_ID}.png"
+
+      - name: Commit and push updates
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
-          git add data/standings.json tmp/cardiff-response.json
+          git add data/standings.json tmp/cardiff-response.json league-icon.png
           if git diff --cached --quiet; then
             echo "🟢 No changes to commit."
           else
-            git commit -m "Update standings"
+            git commit -m "Update standings and league icon for league $LEAGUE_ID ($LEAGUE_NAME)"
             git push
           fi
