--- a/.github/workflows/update-standings.yml
+++ b/.github/workflows/update-standings.yml
@@ -76,11 +76,21 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
-          mv league-icon.png league-icon.png
           git add league-icon.png
           if git diff --cached --quiet; then
             echo "No changes in league icon."
           else
             git commit -m "Update league icon for league ${LEAGUE_ID}"
             git push
-          fi
+    
+      - name: Commit and Push if Changed
+        run: |
+            git config user.name "github-actions"
+            git config user.email "github-actions@users.noreply.github.com"
+            git add data/standings.json tmp/cardiff-response.json
+            if git diff --cached --quiet; then
+              echo "🟢 No changes to commit."
+            else
+              git commit -m "Update standings"
+              git push
+            fi
